--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,11 @@ plugins {
 	id("org.jetbrains.dokka") version "2.0.0"
 }
 
+tasks.dokkaHtml {
+	suppressObviousFunctions.set(true)
+	suppressInheritedMembers.set(true)
+}
+
 sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
 
